# stepper

./: .gitignore  README.md  dune  dune-project  esy.json  index.html  index.re  package.json  pnpm-lock.yaml  rollup.config.js  stepper.install  stepper.opam  tailwind.config.js  tsconfig.json  vite.config.js
.github/workflows/: github-pages.yml  opam-dependency-submission.yml
esy.lock/: index.json
lib/: context.ml  context.mli  dune  eval.ml  eval.mli  evaluator.ml  expr.ml  expr.mli  forest.ml  forest.mli  lexer.mll  parser.mly  printer.ml  stepper.ml  stepper.mli  stepper_lexer.mll  stepper_parser.mly  stepper_printer.ml  stepper_printer.mli  stepper_syntax.ml  stepper_syntax.mli  stepper_typer.ml  stepper_typer.mli  subst.ml  subst.mli  syntax.ml  syntax.mli  typer.ml  typer.mli  value.ml  value.mli  vector.ml  vector.mli
public/: index.html
test/: dune  test.ml
web/: .gitignore  App.re  Check.re  Check.rei  CodeMirror.re  CodeMirror.rei  Editor.re  History.re  History.rei  Input.re  Input.rei  Input.tsx  LazyCodeMirror.re  LazyCodeMirror.tsx  Monaco.re  Monaco.rei  MonacoOptions.re  Object.re  Object.rei  Output.re  Result.re  Result.rei  Settings.re  Settings.rei  StepperReact.re  StepperReactCheckbox.re  StepperReactCheckbox.rei  StepperReactHistory.re  StepperReactHistory.rei  StepperReactInput.re  StepperReactInputImpl.tsx  StepperReactObject.re  StepperReactObject.rei  StepperReactOutput.re  StepperReactOutput.rei  StepperReactSettings.re  StepperReactSettings.rei  StepperResult.re  StepperResult.rei  StepperWorker.re  (+8 more)
web/codemirror/: .gitignore  stepper.grammar  stepper.ts
