(rule
 (targets parser.js)
 (deps
  %{bin:npm}
  (alias ../node_modules)
  syntax.grammar)
 (mode
  (promote (until-clean)))
 (action
  (no-infer
   (progn
    (run %{bin:npm} exec -- lezer-generator syntax.grammar -o parser)))))

(library
 (name stepper_web)
 (libraries
  reason-react
  stepper
  melange.belt
  melange-webapi)
 (preprocess
  (pps melange.ppx reason-react-ppx))
 (modes melange))
